[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/spr_congratulation_0.png" type="Texture" id=1]
[ext_resource path="res://scenes/pausa/ControlPause.gd" type="Script" id=2]
[ext_resource path="res://sprites/spr_pause.png" type="Texture" id=3]

[node name="ControlPause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Efect" type="Tween" parent="."]
pause_mode = 2

[node name="Botons" type="Control" parent="."]
pause_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="Botons"]

[node name="TextureRect" type="TextureRect" parent="Botons/CanvasLayer"]
pause_mode = 2
margin_left = -450.0
margin_top = 200.0
margin_right = -27.0
margin_bottom = 600.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Botons/CanvasLayer/TextureRect"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.2932
margin_top = -26.755
margin_right = 44.7068
margin_bottom = -6.75502
rect_min_size = Vector2( 100, 0 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Botons/CanvasLayer/TextureRect"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.7536
margin_top = 26.109
margin_right = 45.2464
margin_bottom = 46.109
rect_min_size = Vector2( 100, 0 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Botons/CanvasLayer/TextureRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.526
margin_top = -161.268
margin_right = 201.474
margin_bottom = 138.732
rect_min_size = Vector2( 300, 300 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="Botons/CanvasLayer/TextureRect"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.754
margin_top = 76.109
margin_right = 45.246
margin_bottom = 96.109
rect_min_size = Vector2( 100, 0 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Botons/CanvasLayer/TextureRect/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Botons/CanvasLayer/TextureRect/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Botons/CanvasLayer/TextureRect/Menu" to="." method="_on_Menu_pressed"]
